--- a/templates/Cinema_app/index.html
+++ b/templates/Cinema_app/index.html
@@ -90,9 +90,9 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                   <!--  <li class="nav-item">
                         <a href="#resume" class="nav-link">Categorized</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a href="#blog" class="nav-link">Latest Movie</a>
                     </li>
@@ -242,7 +242,7 @@
             
         </div>
     </section>
-
+<!-- 
     <section class="section" id="resume">
             <div class="container">
                 <h2 class="mb-5 pb-4"><span class="text-danger">Movie</span>Categorized</h2>
@@ -282,7 +282,7 @@
                     </div>
                     
     </section>
-
+ -->
 
     <section class="section" id="blog">
         <div class="container">
